--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,161 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  font-family: "Roboto";
+}
+
+.header-container {
+  background-color: #2c0e3a;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 20px 20px;
+  min-height: 10vh;
+}
+
+.website-logo {
+  width: 250px;
+  margin-left: 20px;
+}
+
+.score-timer-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 30%;
+}
+
+.timer-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.timer-icon {
+  width: 28px;
+}
+
+.score {
+  color: #fff;
+  font-weight: bold;
+}
+
+.highlight {
+  margin-left: 10px;
+  font-weight: bold;
+  font-size: 18px;
+  color: #fec653;
+}
+
+.bg-container {
+  background: url('https://assets.ccbp.in/frontend/react-js/match-game-bg.png');
+  background-size: cover;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 20vw;
+  min-height: 90vh;
+}
+
+.random-image {
+  border-radius: 5px;
+  width: 80%;
+}
+
+.tabs-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.tabs-list {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-left: 0px;
+}
+
+.images-container {
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 12px;
+  margin-bottom: 50px;
+  list-style-type: none;
+}
+
+.game-over-container {
+  background-image: url('https://assets.ccbp.in/frontend/react-js/match-game-score-card-lg-bg.png');
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-position-x: center;
+  padding: 20px;
+  padding-bottom: 30px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  min-height: 80vh;
+}
+
+.trophy {
+  width: 40%;
+  padding-top: 180px;
+}
+
+.your-score {
+  color: #ffffff;
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.final-score {
+  color: #fff;
+  font-size: 64px;
+  font-weight: bold;
+  margin-top: 0px;
+}
+
+.reset-btn {
+  background-color: #cf60c8;
+  font-size: 18px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  padding: 10px;
+  padding-right: 15px;
+  border: 0px;
+  cursor: pointer;
+  color: #fff;
+}
+
+.reset-icon {
+  width: 26px;
+  margin-right: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .website-logo {
+    width: 200px;
+  }
+  .score-timer-container {
+    width: 60%;
+  }
+}
