--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  font-family: "Roboto";
+  font-family: 'Roboto';
 }
 
 .header-container {
