--- a/src/components/TabItem/index.css
+++ b/src/components/TabItem/index.css
@@ -24,3 +24,9 @@
   color: #fec653;
   border-bottom: 2px solid #fec653;
 }
+
+@media screen and (max-width: 767px) {
+  .tab-item-button {
+    font-size: 18px;
+  }
+}
