Modified image item on mobile view

--- a/src/components/ImageItem/index.css
+++ b/src/components/ImageItem/index.css
@@ -24,3 +24,10 @@
 .image-item-button:hover {
   transform: scale(1.1);
 }
+
+@media screen and (max-width: 767px) {
+  .image-item-container {
+    width: 130px;
+    height: 130px;
+  }
+}
